# scoring-engine-windows

./: .gitignore  Cargo.toml  README.md  configuration-parser.py  configure-readme.html
samples/: forensics-configuration-01.yaml
source/: main.rs
source/constants/: constants.rs  mod.rs
source/core/: engine.rs  mod.rs  parser.rs  socket.rs
source/utilities/: mod.rs  notifications.rs
website/: index.css  index.html  index.js
